espresso (6.3-1) unstable; urgency=medium

  * Import 6.3-4 for sid
  * Remove Elpa support

 -- Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>  Mon, 28 Jan 2019 19:05:36 +0900

espresso (6.2.1-2) unstable; urgency=medium

  * Add environment_variables in /usr/share/espresso/examples

 -- Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>  Wed, 20 Jun 2018 19:44:00 +0900

espresso (6.2.1-1) unstable; urgency=medium

  * Import 6.2.1-1 for sid
  * Remove Elpa support for the moment
  * debian/quantum-espresso-data.install: Add examples again
  * debian/quantum-espresso-test-suite.install: Add test suite

 -- Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>  Fri, 02 Mar 2018 00:11:10 +0900