@@ -1,2 +1,3 @@
 pseudo			/usr/share/espresso
-Doc/user_guide/* 	/usr/share/doc/quantum-espresso/html
+Doc/user_guide.pdf	/usr/share/doc/quantum-espresso
+environment_variables	/usr/share/espresso/examples
